Fixed code styling/spacing

--- a/app/assets/stylesheets/index-header.scss
+++ b/app/assets/stylesheets/index-header.scss
@@ -10,25 +10,7 @@
     height: 570px;
 }
 
-.header-image-0 {
-    background-image: image-url('landingpage_background.jpeg')
-}
-.header-image-1 {
-    background-image: image-url('landingpage_background.jpeg')
-}
-.header-image-2 {
-    background-image: image-url('landingpage_background.jpeg')
-}
-.header-image-3 {
-   background-image: image-url('landingpage_background.jpeg')
-}
-.header-image-4 {
-    background-image: image-url('landingpage_background.jpeg')
-}
-.header-image-5 {
-    background-image: image-url('landingpage_background.jpeg')
-}
-.header-image-6 {
+.header-image {
     background-image: image-url('landingpage_background.jpeg')
 }
 
